# googletest-json-serde

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  Taskfile.yml  deny.toml  lefthook.yml  package-lock.json  package.json  release-plz.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  deny.yml  release-pr.yml  release.yml  scheduled-sanity-check.yml
benches/: match_matrix_bench.rs
examples/: arrays_unordered.rs  path_matchers.rs  quickstart.rs
sanity/: .gitignore  Cargo.toml
sanity/tests/: sanity_test.rs
scripts/: lint-push-commits.sh  test-downloaded-crate.sh
src/: lib.rs  matcher_support.rs  matchers.rs
src/matcher_support/: count_elements.rs  match_matrix.rs  path.rs
src/matchers/: as_matcher.rs  contains_each_matcher.rs  each_is_matcher.rs  each_matcher.rs  elements_are_matcher.rs  is_contained_in_matcher.rs  json_matcher.rs  len_matcher.rs  matches_pattern_matcher.rs  object.rs  optional_matcher.rs  path_matcher.rs  primitive_matcher.rs  scalar.rs  unordered_elements_are_matcher.rs  value_matcher.rs
tests/: as_matcher_test.rs  composed_matchers_test.rs  contains_each_test.rs  each_is_test.rs  each_matcher_test.rs  elements_are_test.rs  has_path_with_test.rs  is_contained_in_test.rs  is_false_test.rs  is_true_test.rs  json_test.rs  len_matcher_test.rs  match_matrix_regression_test.rs  matches_pattern_test.rs  optional_matcher_test.rs  path_matcher_test.rs  predicate_test.rs  primitive_test.rs  unordered_elements_integration.rs  unordered_elements_test.rs  value_test.rs
