[package]
name = "googletest-json-serde"
description = "GoogleTest (googletest) matchers for serde_json::Value"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/chege/googletest-json-serde"
keywords = ["googletest", "gtest", "json", "serde_json", "matchers"]


[dependencies]
googletest = "0.14.2"
indoc = "2.0.6"
serde_json = "1.0.145"

[lib]
doctest = true