[package]
name = "googletest-json-serde"
version = "0.4.2"
edition = "2024"
rust-version = "1.89.0"
description = "GoogleTest matchers for serde_json::Value"
authors = ["chege"]
repository = "https://github.com/chege/googletest-json-serde"
homepage = "https://github.com/chege/googletest-json-serde"
readme = "README.md"
keywords = ["googletest", "gtest", "json", "serde", "matchers"]
categories = ["development-tools::testing"]
license = "MIT OR Apache-2.0"
exclude = [
    "tests",
    "sanity",

    # CI, tooling, and metadata
    ".github",
    ".husky",
    "Taskfile.yml",
    "commitlint.config.cjs",
    "deny.toml",
    "release-plz.toml",
    "rust-toolchain.toml",

    # Frontend / npm-related
    "package.json",
    "package-lock.json",

    # Docs, license, and auxiliary assets (optional)
    "assets",
    "scripts",
    "CODEOWNERS",
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
]
[dependencies]
googletest = "0.14.2"
serde = "1.0.228"
serde_json = "1.0.145"

[dev-dependencies]
indoc = "2.0.7"

[lib]
doctest = true

[badges]
maintenance = { status = "actively-developed" }
